Added multiple players. Added leave when closing the window

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,10 @@ p {
     margin: 0;
 }
 
+h1 {
+    margin: 0;
+}
+
 body {
     height: 100vh;
 
@@ -49,70 +53,12 @@ header div a {
     color: #212121;
 }
 
-content {
-    padding: 1em;
-    display: grid;
-    grid-template-columns: 20% 20% 20%;
-    justify-content: space-around;
-}
-
-.game-versus {
-    grid-column: 1 / 4;
-    text-align: center;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-}
-.game-versus p {
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-}
-
-.game-option {
-    height: 50%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-
-    border: 1px #212121 solid;
-    background-color: #21212130;
-}
-
-.game-option.option {
-    align-self: self-end;
-
-    border: 1px #00600f solid;
-    background-color: #00600f30;
-
-    cursor: pointer;
-    transition: 300ms all;
-}
-.game-option.option:hover {
-    background-color: #00600f80;
-}
-.game-option.not-selected {
-    opacity: .5;
-}
-.game-option.selected {
-    align-self: self-end;
-    background-color: #00600f90;
-}
-
-.game-option p {
+footer {
+    background-color: #6abf69;
     margin: 0;
-    text-align: center;
-    font-size: 1em;
-    transition: 300ms all;
 }
-.game-option.select:hover p {
-    /* font-size: 2em; */
-}
-.modal {
+
+.modal {    
     position: fixed;
     top: 0;
     bottom: 0;
@@ -144,37 +90,19 @@ content {
     }
 }
 
-.modal.win {
+.hide {
     display: none;
 }
 
-.modal-content.win {
-    border: 2px #6abf69 solid;
+.btn-success {
+    border: 1px #00600f solid;
+    background-color: #00600f30;
+    height: 3em;
+
+    cursor: pointer;
+    transition: 300ms all;
 }
 
-.modal.lose {
-    display: none;
+.btn-success:hover {
+    background-color: #00600f80;
 }
-
-.modal-content.lose {
-    border: 2px #db0e0e solid;
-}
-
-.modal.draw {
-    display: none;
-}
-
-.modal-content.draw {
-    border: 2px #FFCC00 solid;
-}
-
-
-footer {
-    background-color: #6abf69;
-    margin: 0;
-}
-
-h1 {
-    margin: 0;
-}
-
