Alpha colors changed to RGBA

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -47,27 +47,27 @@ content {
     align-content: center;
 
     border: 1px #212121 solid;
-    background-color: #21212130;
+    background-color: rgba(33, 33, 33, 0.2);
 }
 
 .game-option.option {
     align-self: self-end;
 
     border: 1px #00600f solid;
-    background-color: #00600f30;
+    background-color: rgba(0, 96, 15, 0.2);
 
     cursor: pointer;
     transition: 300ms all;
 }
 .game-option.option:hover {
-    background-color: #00600f80;
+    background-color: rgba(0, 96, 15, 0.5);
 }
 .game-option.not-selected {
     opacity: .5;
 }
 .game-option.selected {
     align-self: self-end;
-    background-color: #00600f90;
+    background-color: rgba(0, 96, 15, 0.5);
 }
 
 .game-option p {
